# yk-wetland-mapping

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  remove-ee-test-workspace.ps1  reset-ee-workspace.ps1  setup.py  test.ps1  yukon_wetland_mapping.qgz
data/: cdem.txt
data/geojson/: s1_asc_176_2019.geojson  s1_asc_17_21.geojson  s1_asc_2019.geojson
data/shapefiles/: 175.dbf  175.qmd  175_120_pnts.dbf  175_120_pnts.shp  175_120_pnts.shx  eco_region_176_dev.dbf  eco_region_176_dev.qmd  eco_region_176_dev.shp  eco_region_176_dev.shx  grid.dbf  grid.shx  nts_snrc_1m.dbf  nts_snrc_1m.shx  nts_snrc_250k.dbf  nts_snrc_250k.shp.xml  nts_snrc_250k.shx  nts_snrc_250k_yk_selection.dbf  nts_snrc_250k_yk_selection.qmd  nts_snrc_250k_yk_selection.shp  nts_snrc_50k.shp.xml  nts_snrc_50k.shx  prov_territo.dbf  prov_territo.shp.xml  yk_pusdo_points.dbf  yk_pusdo_points.shp  yk_pusdo_points.shx  yukon.dbf  yukon.prj  (+24 more)
explore/: mk_export_grid.ipynb  process_pusdo_data.ipynb  s1-coverage.ipynb  s1-inputs.ipynb  s1-swath-builder.ipynb  s1-swath-explore.ipynb  s2-compositing.ipynb  s2-coverage.ipynb
notebooks/: 00_s2_processing.ipynb  01_process_training_data.ipynb  02_build_ee_features.ipynb  03_compute_model_and_assessment.ipynb
scripts/: create_cloud_backed_asset.py  export_ft.py  extract_s1.py  preprocess_features.py  randomforest.py  stack_s1.py  terrain.py
ykwmp/: __init__.py  __main__.py  asset.py  classification.py  datasets.py  datautils.py  eesys.py  helpers.py  image_processing.py  image_utils.py  injest.py  model.py  pipeline.py  prediction.py  rsd.py
(+9 files in other folders)
